# city-map-poster-generator

./: .env.example  .gitignore  README.md  biome.json  docker-compose.dev.yml  docker-compose.yml  package.json
apps/api/: .air.api.toml  .air.worker.toml  .env.example  README.md  go.mod  go.sum  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api-go/: go.mod  (+3 more)
apps/api/app/: __init__.py  captcha.py  config.py  font_search.py  jobs.py  location_search.py  main.py  models.py  queueing.py  rate_limit.py  redis_client.py  render.py  state.py  storage.py  themes.py  worker.py
apps/api/cmd/api/: main.go
apps/api/cmd/worker/: main.go
apps/api/internal/captcha/: captcha.go
apps/api/internal/config/: config.go
apps/api/internal/fonts/: fonts.go  fonts_test.go
apps/api/internal/geocode/: nominatim.go
apps/api/internal/httpapi/: metrics.go  server.go
apps/api/internal/jobs/: processor.go
apps/api/internal/osm/: overpass.go
apps/api/internal/queue/: redis_queue.go
apps/api/internal/render/: renderer.go  renderer_test.go
apps/api/internal/state/: state.go
apps/api/internal/storage/: s3.go  s3_test.go
apps/api/internal/themes/: themes.go
apps/api/internal/types/: local_render.go  types.go
apps/api/internal/util/: hash.go  hash_test.go
apps/api/internal/validation/: validation.go  validation_test.go
apps/api/perf/k6/: locations.js  snapshot.js
apps/api/tests/: test_api_validation.py  test_fonts.py  test_health.py  test_layer_controls.py
docker/: api-dev.Dockerfile  api-go.Dockerfile  api.Dockerfile  web-prod.Dockerfile
(+80 files in other folders)
