[project]
name = "city-map-poster-api"
version = "0.1.0"
description = "FastAPI backend for city map poster generator"
requires-python = ">=3.11,<3.13"

dependencies = [
  "fastapi==0.117.1",
  "uvicorn[standard]==0.37.0",
  "redis==6.4.0",
  "rq==2.6.0",
  "boto3==1.40.18",
  "python-multipart==0.0.20",
  "pydantic-settings==2.10.1",
  "httpx==0.28.1",
  "python-dotenv==1.1.1"
]

[dependency-groups]
dev = [
  "pytest==8.4.2",
  "pytest-mock==3.15.0",
  "ruff==0.13.1",
  "pyright==1.1.406",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.pyright]
pythonVersion = "3.11"
include = ["app"]
exclude = ["app/vendor"]
reportMissingImports = "none"
reportMissingModuleSource = "none"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
